# AoC

./: .gitignore  CMakeLists.txt
2023/: CMakeLists.txt
2023/day1/src/: main.cc
2023/day2/: CMakeLists.txt
2023/day2/src/: main.cc
2023/day3/src/: main.cc
2023/day4/: CMakeLists.txt
2023/day5/: CMakeLists.txt
2023/day5/src/: custom_tree.cc  day5.cc  interval_func.cc
2024/: CMakeLists.txt
2024/day1/: main.cc
2024/day11/: CMakeLists.txt
2024/day11/include/: calculator.h  stones.h
2024/day11/src/: calculator.cc  main.cc  powers_of_10.pl  stones.cc  to_two_string.pl
2024/day12/: CMakeLists.txt
2024/day12/include/: garden.h  region.h
2024/day12/src/: garden.cc  main.cc
2024/day2/: CMakeLists.txt
2024/day3/: CMakeLists.txt
2024/day4/: CMakeLists.txt
2024/day5/: CMakeLists.txt
2024/day6/: CMakeLists.txt
2024/day7/: CMakeLists.txt  check_big.pl
2024/day8/: CMakeLists.txt
2024/day9/: CMakeLists.txt
2025/: CMakeLists.txt
2025/day1/: CMakeLists.txt  main.cc
2025/day10/: CMakeLists.txt  machine_stuff.cc  machine_stuff.h  main.cc  test1.cc
2025/day11/: CMakeLists.txt  main.cc  my_part2_helper.cc  my_part2_helper.h  universe.h
2025/day12/: CMakeLists.txt  main.cc
2025/day2/: CMakeLists.txt  main.cc
2025/day3/: CMakeLists.txt  main.cc
2025/day4/: CMakeLists.txt  main.cc
2025/day5/: CMakeLists.txt  main.cc
2025/day6/: CMakeLists.txt  main.cc
2025/day8/: CMakeLists.txt  main.cc
2025/day9/: CMakeLists.txt  main.cc
aoc_reader/: CMakeLists.txt
aoc_reader/include/: aoc_reader.h
aoc_reader/src/: aoc_reader.cc
day1/: CMakeLists.txt
day2/src/: main.cc
day25/: CMakeLists.txt
day25/include/: dfs_helper.h  graph_types.h  link.h  node.h
day25/src/: day25.cc
day3/: CMakeLists.txt
day3/src/: main.cc
day4/src/: day4.cc
day5/: CMakeLists.txt
day5/include/: common.h  custom_tree.h
day5/src/: custom_tree.cc  day5.cc  interval_func.cc  proba.c  proba2.c
me_conversion/: CMakeLists.txt  conversion_impl.cc
me_conversion/include/: me_conversion.h
me_split/: CMakeLists.txt
me_split/include/: me_split.h
readin/: CMakeLists.txt
readin/include/: readin.h
readin/src/: readin.cc
src/: main_feco.kt
stuffed_matrix/: CMakeLists.txt
stuffed_matrix/include/: stuffed_matrix.h
stuffed_matrix/src/: matrix.cc
(+27 files in other folders)
